<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nui.handwritingcalculator.CalculatorActivity" >

<!--    <item
        android:id="@+id/action_draw"
        android:icon="@drawable/write"
        android:title="@string/action_write"
        app:showAsAction="always" />
-->
<!--    <item-->
<!--        android:id="@+id/action_erase"-->
<!--        android:icon="@drawable/eraser"-->
<!--        android:title="@string/action_erase"-->
<!--        app:showAsAction="always" />-->
    <item
        android:id="@+id/action_undo"
        android:icon="@drawable/undo"
        android:title="@string/action_undo"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_clear"
        android:icon="@drawable/clear"
        android:title="@string/action_clear"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_help"
        android:icon="@drawable/help"
        android:title="@string/action_help"
        app:showAsAction="always" />
</menu>