<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/design_default_color_on_secondary"
    android:orientation="vertical"
    android:overScrollMode="ifContentScrolls"
    android:scrollbarStyle="insideOverlay"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".PracticeSelect">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_directions"
        android:layout_marginStart = "5dp"
        android:layout_marginEnd = "5dp"
        android:textColor="@color/design_default_color_on_primary"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/checkbox"
        android:layout_below="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp">

        <CheckBox
            android:id="@+id/multiply_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/design_default_color_on_primary"
            android:padding="20dp"
            android:text="@string/multiply"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/divide_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/multiply_checkbox"
            android:buttonTint="@color/design_default_color_on_primary"
            android:padding="20dp"
            android:text="@string/divide"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/add_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divide_checkbox"
            android:buttonTint="@color/design_default_color_on_primary"
            android:padding="20dp"
            android:text="@string/add"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp" />

        <CheckBox
            android:id="@+id/sub_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/add_checkbox"
            android:buttonTint="@color/design_default_color_on_primary"
            android:padding="20dp"
            android:text="@string/subtract"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="25sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox"
        android:minHeight="300dp">

        <Button
            android:id="@+id/practiceSelectButton"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="25dp"
            android:background="@drawable/custom_button"
            android:text="@string/submit"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp" />
    </RelativeLayout>


</RelativeLayout>