<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/parentToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/parentToolbar"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/calculator"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:background="@drawable/custom_button"
            android:minHeight="60dp"
            android:text="@string/calculator"
            android:textColor="#FFFFFF"

            />

        <Button
            android:id="@+id/practice"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calculator"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="100dp"
            android:background="@drawable/custom_button"
            android:minHeight="60dp"
            android:text="@string/practice"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/help"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/practice"
            android:layout_centerHorizontal="true"
            android:background="@drawable/custom_button"
            android:minHeight="60dp"
            android:text="@string/help"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</RelativeLayout>