<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context=".help">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/custom_background"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/calc_help_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_secondary"
            android:text="@string/help_calc"
            android:textColor="@color/design_default_color_on_primary" />

        <Button
            android:id="@+id/practice_help_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/design_default_color_on_secondary"
            android:text="@string/help_practice"
            android:textColor="@color/design_default_color_on_primary" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Calculator_Help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_text" />

            <TextView
                android:id="@+id/Practice_Help"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/long_text" />


        </LinearLayout>

    </ScrollView>

</LinearLayout>

