<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:background="@color/colorPrimary"-->
<!--    android:orientation="vertical"-->
<!--    tools:context=".CalculatorActivity">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".CalculatorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/mode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="0dp"

        android:background="@color/design_default_color_background"
        android:gravity="start"
        android:text="@string/draw_mode"
        android:textAlignment="gravity"
        android:textColor="@color/design_default_color_on_secondary"
        android:textStyle="normal" />


    <android.gesture.GestureOverlayView
        android:id="@+id/overlay"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"
        android:layout_weight="4"
        android:eventsInterceptionEnabled="true"
        android:fadeDuration="0"
        android:fadeOffset="0"
        android:gestureStrokeType="multiple"
        android:orientation="vertical">

        <com.nui.handwritingcalculator.HandwritingView
            android:id="@+id/handwriting"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/design_default_color_on_secondary" />

        <!--        <ListView-->
        <!--            android:id="@android:id/list"-->
        <!--            android:layout_width="fill_parent"-->
        <!--            android:layout_height="fill_parent"  />-->

    </android.gesture.GestureOverlayView>

    <LinearLayout
        android:id="@+id/calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/calculate_btn"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:text="@string/Calculate" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="0dp"
            android:background="@color/design_default_color_background"
            android:gravity="start"
            android:text="@string/result"
            android:textColor="@color/design_default_color_on_secondary"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/solution"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="3dp"
        android:layout_weight="1"
        android:background="@color/design_default_color_on_secondary"
        android:textColor="#FFFFFF"
        android:textSize="20sp" />

</LinearLayout>

